# mem0custom

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml
.claude/: settings.json.example
.claude/commands/: sum.md
.github/workflows/: README.md  build-and-deploy.yml  build-chatgpt-desktop.yml  build-windows.yml  deploy.yml  release.yml  test.yml
archive-api/: Dockerfile  app.py  embeddings.py  qdrant_helper.py  r2_storage.py  requirements.txt  schema-v2.sql  schema.sql  summarizer.py
benchmarks/: graph_llm_battle.py  graph_llm_battle_v2.py  mcp_e2e_battle.py
chatgpt-desktop/: .gitignore  CHANGELOG.md  CHAT-HISTORY-README.md  DISCLAIMER.md  FLOW.md  INTEGRATION.md  README.md  build-windows.ps1  instruction.md.sample  keywords.json.sample  package.json  run-portable.bat  summarize.json.sample  sync.json.sample  test-chat-logger.mjs  test_history_logic.py
chatgpt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
chatgpt-desktop/src-tauri/capabilities/: desktop.json
chatgpt-desktop/src-tauri/default-config/: summarize.default.json  sync.default.json
chatgpt-desktop/src-tauri/scripts/: chat-logger.js
chatgpt-desktop/src-tauri/src/: main.rs
chatgpt-desktop/src-tauri/src/core/: cmd.rs  history.rs  mod.rs  oauth_refresh.rs  setup.rs  summarize.rs  sync.rs  template.rs
chatgpt-desktop/tests/: acceptance_test.py  validate_release.ps1
docs/: INSTALL-WINDOWS-PORTABLE.md  NEW-FEATURES.md  R2-PROTECTION-LAYERS.md  ROADMAP-RAG.md  huong-dan-archive-full-transcript.md  huong-dan-ci-cd-github-actions.md  huong-dan-lenh-sum.md  huong-dan-session-end.md  huong-dan-trien-khai-mcp-server.md  huong-dan-trien-khai-r2-storage.md  plan-trien-khai-memory-server-mac-windows.md
mcp-http-server/: Dockerfile  app.py  oauth.py  requirements.txt  test_memory_tools.py  test_oauth.py
memory-rest-api/: Dockerfile  README.md  app.py  openapi-archive-for-chatgpt.yaml  openapi-for-chatgpt.yaml  test-actions.ps1  test-actions.sh
scripts/: archive-env.example.ps1  archive-env.example.sh  archive-mcp.py  archive-upload.py  r2-budget-check.py  r2-budget-env.example.sh  sum_hook.py  test_archive_mcp.py  test_r2_budget_check.py  test_sum_hook.py
src/mem0_mcp_selfhosted/: __init__.py  archive_tools.py  auth.py  env.py  (+14 more)
tests/: conftest.py
(+24 files in other folders)
