[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem0-mcp-selfhosted"
version = "0.4.2"
description = "Self-hosted mem0 MCP server for Claude Code (HTTP exe + archive 7 tools + auto-upload + hooks)"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "elvismdev" },
]
dependencies = [
    "mcp[cli]>=1.23.0",
    "mem0ai>=1.0.3,<2.0",
    "anthropic>=0.77.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mem0-mcp-selfhosted = "mem0_mcp_selfhosted:main"
mem0-mcp-http = "mem0_mcp_selfhosted.http_server:main"
mem0-test-cli = "mem0_mcp_selfhosted.test_cli:main"
mem0-hook-context = "mem0_mcp_selfhosted.hooks:context_main"
mem0-hook-stop = "mem0_mcp_selfhosted.hooks:stop_main"
mem0-install-hooks = "mem0_mcp_selfhosted.hooks:install_main"

[tool.hatch.build.targets.wheel]
packages = ["src/mem0_mcp_selfhosted"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require live infrastructure (Qdrant, Ollama, Anthropic, Neo4j)",
    "contract: tests that validate mem0ai internal API stability",
]
