[package]
name = "chatgpt"
version = "0.8.1"
description = "ChatGPT Desktop Application (Unofficial)"
authors = ["lencx <cxin1314@gmail.com>"]
repository = "https://github.com/lencx/ChatGPT"
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.77.1"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable", "devtools"] }
tokio = { version = "1.37.0", features = ["macros", "time"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"
log = "0.4.21"
simplelog = "0.12"
anyhow = "1.0.83"
dark-light = "1.1.1"
regex = "1.10.4"
semver = "1.0.23"
tauri-plugin-os = "2.0.0-beta.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
